Added mapping functionality and Molecules

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ setup-requires =
 install-requires =  # ?? requires-dist?
     numpy
     networkx ~= 2.0
-include_package_data = True
+zip-safe = False
 
 [options.extras_require]
 full = 
