Allows martinize2 to be imported
* Add matplotlib to the requirements (see #23)
* add aminoacids.rtp alongside do_mapping.py and assure it is found
  (see #4)

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ setup-requires =
 install-requires =  # ?? requires-dist?
     numpy
     networkx ~= 2.0
+    matplotlib  # See issue #23
 zip-safe = False
 
 [options.extras_require]
