--- a/setup.cfg
+++ b/setup.cfg
@@ -5,13 +5,13 @@ universal = 1
 name = vermouth
 author = P C Kroon
 author_email = p.c.kroon@rug.nl
-license = MIT
+license = Apache 2.0
 classifier =
     Development Status :: 5 - Production/Stable
     Environment :: Console
     Intended Audience :: Developers
     Intended Audience :: Science/Research
-    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
