--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ addons:
 env:
     - VERMOUTH_TEST_DSSP=mkdssp
 install:
+    - pip install pylint
     - pip install --upgrade .
 script:
     - pytest -vv vermouth
+after_script:
+    - pylint vermouth
+    - pylint bin/martinize2
