Add a version number using pbr

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ packages = find:
 setup-requires =
     setuptools >= 30.3.0
 install-requires =  # ?? requires-dist?
+    pbr
     numpy
     networkx ~= 2.0
     matplotlib  # See issue #23
