Reduce redundancy between setup.py and setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ keywords = martini MD martinize
 packages = find:
 setup-requires =
     setuptools >= 30.3.0
+    pbr
 install-requires =  # ?? requires-dist?
     pbr
     numpy
