Add codecov to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,14 @@ addons:
 env:
     - VERMOUTH_TEST_DSSP=mkdssp
 install:
-    - pip install pylint
+    - pip install --upgrade pylint codecov pytest-cov
     - pip install --upgrade .
 script:
-    - pytest -vv vermouth
+    - pytest -vv --cov=vermouth vermouth 
 after_script:
     - pylint vermouth
     - pylint bin/martinize2
+after_success:
+    - if [[ $TRAVIS_PYTHON_VERSION == "3.5" ]]; then
+      codecov;
+      fi
