--- a/setup.cfg
+++ b/setup.cfg
@@ -41,5 +41,5 @@ full =
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
-warning-is-error = False
+warning-is-error = True
 builder = html
