--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,8 @@ jobs:
       install:
         - pip install --upgrade -r requirements-docs.txt
         - pip install --upgrade .[full]
-      script: python setup.py build_sphinx
+      # script: python setup.py build_sphinx
+      script: sphinx-build -EnW -b html doc/source/ doc/build/html
       after_success: skip
     - stage: pylint
       python: "3.5"
