--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ jobs:
         - pip install --upgrade -r requirements-docs.txt
         - pip install --upgrade .[full]
       # script: python setup.py build_sphinx
-      script: sphinx-build -EnW -b html doc/source/ doc/build/html
+      script: mkdir -p doc/source/_static; sphinx-build -EnW -b html doc/source/ doc/build/html
       after_success: skip
     - stage: pylint
       python: "3.5"
