--- a/.travis.yml
+++ b/.travis.yml
@@ -47,9 +47,15 @@ jobs:
       addons: skip
       install:
         - pip install pylint
-      script: 
-        - pylint vermouth
-        - pylint bin/martinize2
+      script:
+          # Run Pylint, extract the line that looks like " 9.53/10", and
+          # extract the score. Compare the score to 9.5 ("\1>9.5"). Fail if
+          # lower, success if higher. There's probably also a way to get the
+          # output on screen as well. But meh.
+        - [ $(bc -l <<< $(pylint vermouth | sed -re 's_.* ([0-9\.]+)/10.*_\1>9.5_;t;d')) -eq 1 ] 
+        - [ $(bc -l <<< $(pylint bin/martinize2 | sed -re 's_.* ([0-9\.]+)/10.*_\1>9.5_;t;d')) -eq 1 ] 
+        # - pylint vermouth
+        # - pylint bin/martinize2
       after_success: skip
 #   - stage: deploy
 #     python: "3.5"
