--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ python:
 matrix:
   allow_failures:
     - python: "2.7"
+    - python: "3.7"
     - python: "3.5-dev"
     - python: "3.6-dev"
     - python: "3.7-dev"
