--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ jobs:
       python: "3.5"
       addons: skip
       install:
+        - pip install --upgrade -r requirements-tests.txt
         - pip install pylint
       script:
         - python run_pylint.py --disable=fixme --fail-under=8.5 vermouth 
