--- a/.travis.yml
+++ b/.travis.yml
@@ -23,13 +23,13 @@ addons:
 jobs:
   fast_finish: true
   allow_failures:
-    - python: "2.7"
+    #- python: "2.7"
     - python: "3.5-dev"
     - python: "3.6-dev"
     - python: "3.7-dev"
     - python: "3.8-dev"
   include:
-    - python: "2.7"
+      #- python: "2.7"
     - python: "3.4"
     - python: "3.5"
     - python: "3.6"
