--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - pip install --upgrade -r requirements-tests.txt
   - pip install --upgrade .
 script:
-  - pytest -vv --cov=vermouth vermouth 
+  - pytest -vv --cov=vermouth vermouth --hypothesis-show-statistics
 after_success:
   - codecov
 addons:
