--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
     - SKIP_GENERATE_AUTHORS=1
     - SKIP_WRITE_GIT_CHANGELOG=1
 install:
+  - pip install --upgrade pip setuptools
   - pip install --upgrade -r requirements-tests.txt
   - pip install --upgrade .
 script:
