--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - pip install --upgrade -r requirements-tests.txt
   - pip install --upgrade .
 script:
-  - coverage run $(which pytest) -vv vermouth --hypothesis-show-statistics
+  - coverage run --source=vermouth $(which pytest) -vv vermouth --hypothesis-show-statistics
 after_success:
   - coverage report --omit='*/bin/pytest'
   - if [[ ${WITH_CODECOV} == true ]]; then codecov; fi
