--- a/.travis.yml
+++ b/.travis.yml
@@ -80,7 +80,7 @@ jobs:
       deploy:
           provider: pypi
           # Remove the server stanza once we know it works.
-          server: http://test.pypi.org/legacy
+          server: https://test.pypi.org/legacy
           user: peterkroon
           password:
               # travis encrypt --add deploy.password
