Add description to setup.cfg for pypi

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,9 @@ universal = 1
 name = vermouth
 author = P C Kroon
 author_email = p.c.kroon@rug.nl
+description_file = README.md
+description-content-type = text/markdown; charset=UTF-8
+url = https://github.com/marrink-lab/vermouth-martinize
 license = Apache 2.0
 classifier =
     Development Status :: 5 - Production/Stable
