--- a/.pylintrc
+++ b/.pylintrc
@@ -18,7 +18,8 @@ ignore-patterns=
 #init-hook=
 
 # Use multiple processes to speed up Pylint.
-jobs=0
+# Using multiple processes causes an exception that gets swallowed, resulting in no score.
+jobs=1
 
 # List of plugins (as comma separated values of python modules names) to load,
 # usually to register additional checkers.
