--- a/.pylintrc
+++ b/.pylintrc
@@ -131,7 +131,8 @@ disable=print-statement,
         no-else-return,
         no-else-raise,
         no-else-continue,
-        logging-format-interpolation
+        logging-format-interpolation,
+        not-callable,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -288,7 +289,7 @@ function-naming-style=snake_case
 good-names=_,
            aa,
            cg,
-           ff
+           ff,
 
 # Include a hint for the correct naming format with invalid-name
 include-naming-hint=no
