--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -14,11 +14,6 @@ jobs:
 
     runs-on: ubuntu-latest
     
-    env:
-     VERMOUTH_TEST_DSSP: mkdssp
-     SKIP_GENERATE_AUTHORS: 1
-     SKIP_WRITE_GIT_CHANGELOG: 1
-    
     strategy:
       matrix:
        py_version: ["3.6", "3.7", "3.8", "3.9", "3.6-dev", "3.7-dev", "3.8-dev", "3.9-dev"] 
@@ -34,19 +29,13 @@ jobs:
            WITH_SCIPY: true
          - py_version: "3.9"
            WITH_CODECOV: true
-           WITH_SCIPY: true
-         - py_version: "3.6-dev"
-           WITH_CODECOV: true
-           WITH_SCIPY: true  
-         - py_version: "3.7-dev"
-           WITH_CODECOV: true
-           WITH_SCIPY: true   
+           WITH_SCIPY: false
          - py_version: "3.8-dev"
-           WITH_CODECOV: false
-           WITH_SCIPY: false
+           WITH_CODECOV: true
+           WITH_SCIPY: true
          - py_version: "3.9-dev"
-           WITH_CODECOV: false
-           WITH_SCIPY: false
+           WITH_CODECOV: true
+           WITH_SCIPY: true
            
     steps:
     - uses: actions/checkout@v2
@@ -54,12 +43,16 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.py_version }}
-    - name: Install dependencies
+    - name: Install dependencies part I
       run: |
         sudo apt-get install dssp
         pip install --upgrade setuptools pip
-        if: ${{ matrix.WITH_SCIPY }}
-          pip install scipy
+    - if: ${{ matrix.WITH_SCIPY }}
+      name: Install scipy
+      run: |
+        pip install scipy
+    - name: Install package and requirements
+      run: |
         pip install --upgrade .
         pip install -r requirements-tests.txt
         
@@ -67,8 +60,11 @@ jobs:
       run: |
         coverage run --source=vermouth $(which pytest) -vv vermouth --hypothesis-show-statistics
         coverage report --omit='*/bin/pytest'
-        if: ${{ matrix.WITH_CODECOV }}
-          codecov
+        
+    - if: ${{ matrix.WITH_CODECOV }}
+      name: Report code coverage 
+      run: |
+        codecov
         
   lint:
     runs-on: ubuntu-latest
@@ -78,7 +74,7 @@ jobs:
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: 3.9
     - name: Install dependencies
       run: |
         pip install --upgrade setuptools pip
@@ -98,7 +94,7 @@ jobs:
       - name: Set up Python 3.7
         uses: actions/setup-python@v2
         with:
-           python-version: 3.7
+           python-version: 3.9
       - name: Install dependencies
         run: |
           pip install --upgrade setuptools pip
