--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
     
     strategy:
       matrix:
-       py_version: ["3.6", "3.7", "3.8", "3.9", "3.6-dev", "3.7-dev", "3.8-dev", "3.9-dev"] 
+       py_version: ["3.6", "3.7", "3.8", "3.9"] 
        include:
          - py_version: "3.6"
            WITH_CODECOV: true
@@ -33,12 +33,6 @@ jobs:
          - py_version: "3.9"
            WITH_CODECOV: true
            WITH_SCIPY: false
-         - py_version: "3.8-dev"
-           WITH_CODECOV: true
-           WITH_SCIPY: true
-         - py_version: "3.9-dev"
-           WITH_CODECOV: true
-           WITH_SCIPY: true
            
     steps:
     - uses: actions/checkout@v2
