--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -135,6 +135,6 @@ jobs:
       uses: pypa/gh-action-pypi-publish@master      
       with:
        user: __token__
-       password: ${{ secrets.PYPI_TEST_API_TOKEN }}
+       password: ${{ secrets.PYPI_API_TOKEN }}
        packages_dir: dist/
-       repository_url: https://test.pypi.org/legacy/
+       repository_url: https://pypi.org/legacy/
