(re-)Implement GMX RTP parser using lark-parser

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ install-requires =  # ?? requires-dist?
     pbr
     numpy
     networkx ~= 2.0
+    lark
 zip-safe = False
 
 [options.extras_require]
