--- a/.pylintrc
+++ b/.pylintrc
@@ -132,7 +132,7 @@ disable=print-statement,
         no-else-raise,
         no-else-continue,
         logging-format-interpolation,
-        not-callable,
+        not-callable
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -289,7 +289,7 @@ function-naming-style=snake_case
 good-names=_,
            aa,
            cg,
-           ff,
+           ff
 
 # Include a hint for the correct naming format with invalid-name
 include-naming-hint=no
