--- a/.pylintrc
+++ b/.pylintrc
@@ -7,7 +7,7 @@ extension-pkg-whitelist=
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=CVS,redistributed
+ignore=CVS,redistributed,tests
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
@@ -129,10 +129,7 @@ disable=print-statement,
         dict-keys-not-iterating,
         dict-values-not-iterating,
         no-else-return,
-        no-else-raise,
-        no-else-continue,
-        logging-format-interpolation,
-        not-callable
+        logging-format-interpolation
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -194,7 +191,7 @@ ignore-comments=yes
 ignore-docstrings=yes
 
 # Ignore imports when computing similarities.
-ignore-imports=yes
+ignore-imports=no
 
 # Minimum lines number of a similarity.
 min-similarity-lines=4
@@ -288,8 +285,7 @@ function-naming-style=snake_case
 # Good variable names which should always be accepted, separated by a comma
 good-names=_,
            aa,
-           cg,
-           ff
+           cg
 
 # Include a hint for the correct naming format with invalid-name
 include-naming-hint=no
