--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -21,19 +21,21 @@ jobs:
     
     strategy:
       matrix:
-       py_version: ["3.6", "3.7", "3.8", "3.9", "3.6-dev", "3.7-dev", "3.8-dev", "3.9-dev"] 
+       py_version: ["3.7", "3.8", "3.9", "3.10", "3.7-dev", "3.8-dev", "3.9-dev", "3.10-dev"]
        include:
-         - py_version: "3.6"
-           WITH_CODECOV: true
          - py_version: "3.7"
            WITH_CODECOV: true
          - py_version: "3.8"
            WITH_CODECOV: true
          - py_version: "3.9"
            WITH_CODECOV: true
+         - py_version: "3.10"
+           WITH_CODECOV: true
          - py_version: "3.8-dev"
            WITH_CODECOV: true
          - py_version: "3.9-dev"
+           WITH_CODECOV: true
+         - py_version: "3.10-dev"
            WITH_CODECOV: true
 
     steps:
@@ -67,10 +69,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.9
+    - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
-        python-version: 3.9
+        python-version: 3.10
         cache: pip
     - name: Install dependencies
       run: |
@@ -88,10 +90,10 @@ jobs:
       
       steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.9
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-           python-version: 3.9
+           python-version: 3.10
            cache: pip
       - name: Install dependencies
         run: |
