--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,10 @@ jobs:
       with:
         python-version: ${{ matrix.py_version }}
         cache: pip
+        cache-dependency-path: |
+          **/setup.cfg
+          **/requirements-*.txt
+          **/pyproject.toml
     - name: Install dependencies part I
       run: |
         sudo apt-get install dssp
@@ -66,6 +70,10 @@ jobs:
       with:
         python-version: 3.10
         cache: pip
+        cache-dependency-path: |
+          **/setup.cfg
+          **/requirements-*.txt
+          **/pyproject.toml
     - name: Install dependencies
       run: |
         pip install --upgrade setuptools pip
@@ -87,6 +95,10 @@ jobs:
         with:
            python-version: 3.10
            cache: pip
+           cache-dependency-path: |
+             **/setup.cfg
+             **/requirements-*.txt
+             **/pyproject.toml
       - name: Install dependencies
         run: |
           pip install --upgrade setuptools pip
@@ -110,6 +122,10 @@ jobs:
       with:
         python-version: 3.10
         cache: pip
+        cache-dependency-path: |
+          **/setup.cfg
+          **/requirements-*.txt
+          **/pyproject.toml
         
     - name: Install pypa/build
       run: >-
