--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -45,6 +45,10 @@ jobs:
       with:
         python-version: ${{ matrix.py_version }}
         cache: pip
+        cache-dependency-path: |
+          **/setup.cfg
+          **/requirements-*.txt
+          **/pyproject.toml
     - name: Install dependencies part I
       run: |
         sudo apt-get install dssp
@@ -74,6 +78,10 @@ jobs:
       with:
         python-version: 3.10
         cache: pip
+        cache-dependency-path: |
+          **/setup.cfg
+          **/requirements-*.txt
+          **/pyproject.toml
     - name: Install dependencies
       run: |
         pip install --upgrade setuptools pip
@@ -95,6 +103,10 @@ jobs:
         with:
            python-version: 3.10
            cache: pip
+           cache-dependency-path: |
+             **/setup.cfg
+             **/requirements-*.txt
+             **/pyproject.toml
       - name: Install dependencies
         run: |
           pip install --upgrade setuptools pip
