--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,7 +68,7 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
-        python-version: 3.10
+        python-version: '3.10'
         cache: pip
         cache-dependency-path: |
           **/setup.cfg
@@ -93,7 +93,7 @@ jobs:
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-           python-version: 3.10
+           python-version: '3.10'
            cache: pip
            cache-dependency-path: |
              **/setup.cfg
@@ -120,7 +120,7 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
-        python-version: 3.10
+        python-version: '3.10'
         cache: pip
         cache-dependency-path: |
           **/setup.cfg
