--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -76,7 +76,7 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
-        python-version: 3.10
+        python-version: '3.10'
         cache: pip
         cache-dependency-path: |
           **/setup.cfg
@@ -101,7 +101,7 @@ jobs:
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-           python-version: 3.10
+           python-version: '3.10'
            cache: pip
            cache-dependency-path: |
              **/setup.cfg
