--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -21,7 +21,7 @@ jobs:
     
     strategy:
       matrix:
-       py_version: ["3.7", "3.8", "3.9", "3.10"]
+       py_version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
        include:
          - py_version: "3.7"
            WITH_CODECOV: true
@@ -30,6 +30,8 @@ jobs:
          - py_version: "3.9"
            WITH_CODECOV: true
          - py_version: "3.10"
+           WITH_CODECOV: true
+         - py_version: "3.11"
            WITH_CODECOV: true
 
     steps:
