--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -56,8 +56,8 @@ jobs:
         
     - name: Run pytest with codecoverage
       run: |
-        coverage run --source=vermouth $(which pytest) -vv vermouth --hypothesis-show-statistics
-        coverage report --omit='*/bin/pytest'
+        pytest --cov vermouth --hypothesis-show-statistics
+        codecov/codecov-action@v3 --omit='*/bin/pytest'
         
     - if: ${{ matrix.WITH_CODECOV }}
       name: Report code coverage 
