--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -55,15 +55,14 @@ jobs:
         pip install -r requirements-tests.txt
         
     - name: Run pytest with codecoverage
-      run: |
-        coverage run --source=vermouth $(which pytest) -vv vermouth --hypothesis-show-statistics
-        coverage report --omit='*/bin/pytest'
-        
+      run:  pytest --cov polyply
     - if: ${{ matrix.WITH_CODECOV }}
-      name: Report code coverage 
-      run: |
-        codecov
-        
+      name: Upload coverage codecov   
+      uses: codecov/codecov-action@v3 
+      with:
+            gcov_ignore: '*/bin/pytest'
+            verbose: true
+            
   lint:
     runs-on: ubuntu-latest
 
