--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -55,7 +55,7 @@ jobs:
         pip install -r requirements-tests.txt
         
     - name: Run pytest with codecoverage
-      run:  pytest vermouth --cov=vermouth --hypothesis-show-statistics
+      run:  pytest vermouth --cov=vermouth --cov-report=xml --hypothesis-show-statistics
     - if: ${{ matrix.WITH_CODECOV }}
       name: Upload coverage codecov   
       uses: codecov/codecov-action@v3 
