--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -60,7 +60,9 @@ jobs:
       name: Upload coverage codecov   
       uses: codecov/codecov-action@v3 
       with:
-            gcov_ignore: '*/bin/pytest'
+            token: ${{ secrets.CODECOV_TOKEN }}
+            files: ./coverage.xml
+            fail_ci_if_error: true
             verbose: true
             
   lint:
