--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -21,10 +21,8 @@ jobs:
     
     strategy:
       matrix:
-       py_version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+       py_version: ["3.8", "3.9", "3.10", "3.11"]
        include:
-         - py_version: "3.7"
-           WITH_CODECOV: true
          - py_version: "3.8"
            WITH_CODECOV: true
          - py_version: "3.9"
@@ -70,10 +68,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
+    - name: Set up Python 3.11
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.11'
         cache: pip
         cache-dependency-path: |
           **/setup.cfg
@@ -95,10 +93,10 @@ jobs:
       
       steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.10
+      - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
-           python-version: '3.10'
+           python-version: '3.11'
            cache: pip
            cache-dependency-path: |
              **/setup.cfg
