--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ setup-requires =
 install-requires =  # ?? requires-dist?
     pbr
     numpy
-    networkx ~= 3.0
+    networkx >= 2.0
     scipy
 zip-safe = False
 
