Add mdtraj optional dependency to setup.cfg and readme

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,9 @@ install-requires =  # ?? requires-dist?
     scipy
 zip-safe = False
 
+[options.extras_require]
+mdtraj = mdtraj
+
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
