--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,8 @@ requires = [
         "setuptools >= 30.3.0",
         "pbr",
     ]
+
+[tool.pytest.ini_options]
+addopts = "--import-mode=importlib"
+testpaths = ["vermouth/tests"]
+python_files = "test_*.py"
