--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,7 @@ jobs:
       with:
             token: ${{ secrets.CODECOV_TOKEN }}
             files: ./coverage.xml
-            fail_ci_if_error: true
+            fail_ci_if_error: false
             verbose: true
         
   lint:
