--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -125,6 +125,9 @@ jobs:
       id-token: write
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-tags: true
+        fetch-depth: 0
     - name: Set up Python 3
       uses: actions/setup-python@v5
       with:
