Add Py3.12 to the tests, remove py3.8

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ requires = [
         "setuptools >= 30.3.0",
         "pbr",
     ]
+build-backend = "pbr.build"
 
 [tool.pytest.ini_options]
 addopts = "--import-mode=importlib"
