--- a/.pylintrc
+++ b/.pylintrc
@@ -345,7 +345,7 @@ indent-after-paren=4
 indent-string='    '
 
 # Maximum number of characters on a single line.
-max-line-length=100
+max-line-length=120
 
 # Maximum number of lines in a module.
 max-module-lines=1000
@@ -443,7 +443,9 @@ disable=raw-checker-failed,
         no-else-raise,
         no-else-continue,
         logging-format-interpolation,
-        not-callable
+        not-callable,
+	fixme,
+	consider-using-f-string
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
