--- a/setup.cfg
+++ b/setup.cfg
@@ -35,10 +35,8 @@ install-requires =  # ?? requires-dist?
     numpy
     networkx >= 2.0
     scipy
+    mdtraj
 zip-safe = False
-
-[options.extras_require]
-mdtraj = mdtraj
 
 [build_sphinx]
 source-dir = doc/source
