Revert "remove support for dssp executable. add mdtraj to installation requirements"
This reverts commit 0a52aa6762d821ef544671c97ac9c74aa8797fe8.

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,8 +35,10 @@ install-requires =  # ?? requires-dist?
     numpy
     networkx >= 2.0
     scipy
-    mdtraj
 zip-safe = False
+
+[options.extras_require]
+mdtraj = mdtraj
 
 [build_sphinx]
 source-dir = doc/source
