--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ zip-safe = False
 
 [options.extras_require]
 mdtraj = mdtraj
-PyCifRW = PyCifRW < 5.0.0
+PyCifRW = PyCifRW
 
 [build_sphinx]
 source-dir = doc/source
